# questionbankgen

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
questionbank/: __init__.py  cli.py  config.py
questionbank/core/: __init__.py  generator.py  prompt_builder.py
questionbank/intelligence/: __init__.py  coherence_validator.py  constraint_extractor.py  duplicate_detector.py  image_generator.py  smart_generator.py  validation_pipeline.py
questionbank/llm/: gemini_client.py
questionbank/mongodb/: __init__.py  connection.py  repository.py
questionbank/utils/: gcs.py  image_generator.py  khan_colors.py  math_visualizer.py  solution_generator.py
questionbank/validation/: __init__.py  answer_verifier.py  comprehensive_verifier.py  latex_validator.py  math_verifier.py  pipeline.py  schema_validator.py
tests/: __init__.py  test_gcs_upload.py
